# cardo

./: .eslintrc.json  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish.yml  test-build.yml  translations_stats.yml
locales/: en.json  es.json  fr.json
resources/translations/: ar.json  cn.json  cs.json  de.json  en.json  es.json  fr.json  it.json  pt.json  tr.json
scripts/: makeTranslations.py  setup-macos.sh  setup-ubuntu.sh  setup-windows.ps1  updateTranslationsStats.py  update_version.sh
src/: App.tsx  ContextProviders.ts  DB.tsx  DefaultThemes.ts  Global.ts  Icons.tsx  Settings.tsx  ThemeConfigurator.tsx  Updater.tsx  custom-styles.css  flip-cards.css  i18n.ts  index.d.ts  main.css  main.tsx  postupdate.ts  text-auto.css  translations.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: cardo.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/DB/: DB.tsx  Downloads.ts  EpisodeState.ts  History.ts  Misc.ts  Queue.ts  Subscriptions.ts  SubscriptionsEpisodes.ts  index.d.ts
src/SearchAPI/: apple.ts  base.ts
src/components/: AudioPlayer.tsx  ContextMenu.tsx  Cover.tsx  DownloadsIndicator.tsx  EpisodeCard.tsx  EpisodeOverview.tsx  EpisodePreviewCard.tsx  Inputs.tsx  LeftMenu.tsx  ModalBanner.tsx  PodcastCard.tsx  PodcastPreview.tsx  ProgressBar.tsx  SearchBar.tsx  SortEpisodeGrip.tsx  SubscriptionCard.tsx  TitleBar.tsx
src/components/sync/: GpodderSettings.tsx  NextcloudSettings.tsx  SyncButton.tsx  SyncSettings.tsx
src/engines/: AudioProcessor.ts  DB.tsx  Episode.tsx  Settings.tsx  translations.ts
src/engines/search/: apple.ts  base.ts  fyyd.ts  podcastindex.ts
src/pages/: DownloadsPage.tsx  EpisodePreview.tsx  HistoryPage.tsx  HomePage.tsx  PodcastPreview.tsx  QueuePage.tsx  SearchPage.tsx  Settings.tsx
src/sync/: Gpodder.ts  Nextcloud.ts  Nextcloud.tsx  Settings.tsx  Sync.tsx  index.d.ts
src/utils/: opml.ts  sanitize.ts  stripAllHTML.ts  utils.ts
