[package]
name = "cardo"
version = "1.12.0"
description = "Cardo"
authors = ["n0vella"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-open", "protocol-asset", "updater", "global-shortcut-all", "fs-all", "os-all", "path-all", "http-all", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mio = {version = "1"}
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"] # or "postgres", or "mysql"
